--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
     <h2>
       <b> <p>Here are some of the products we offer.</p> </b>
     </h2>
-
-    <div class="card1">
+ <div class="card1">
       <img class="cardpiccold" src="mocha.jpg" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">MOCHA</h5>
@@ -243,6 +242,7 @@
         <a href="#" class="btn btn-primary">ORDER</a>
       </div>
     </div>
+  </div>
 
     <div class="justificationtxt">
       <p>Welcome to MALCOFFEE! We are a coffee shop dedicated to providing our customers with the highest quality coffee and service.
